Выполнил первую часть ДЗ